- Registering a device to a network deployment - Retrieving all registered devices, sorted by device type - Retrieving network deployment device by MAC address
